// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard should render 1`] = `
<Card>
  <Box
    flexDirection="column"
    height="100%"
    padding="10px"
  >
    <Box
      minHeight="200px"
    >
      <Image
        alt="product photo"
        src="__IMAGE_URL__"
      />
    </Box>
    <Box
      flexDirection="column"
      height="100%"
    >
      <Text
        textAlign="center"
      >
        <H3>
          __TITLE__
        </H3>
      </Text>
      <Box
        flex={1}
      />
      <Divider />
      <Box
        justifyContent="flex-end"
        margin="15px 0px 5px 0"
      >
        <Text
          color="MAIN_RED"
          fontSize="fs400"
          fontWeight="fw700"
        >
          lei 
          100
        </Text>
      </Box>
    </Box>
  </Box>
</Card>
`;

exports[`ProductCard should render with alternative product 1`] = `
<Card>
  <Box
    flexDirection="column"
    height="100%"
    padding="10px"
  >
    <Box
      minHeight="200px"
    >
      <Image
        alt="product photo"
        src="test-file-stub"
      />
    </Box>
    <Box
      flexDirection="column"
      height="100%"
    >
      <Text
        textAlign="center"
      >
        <H3>
          __TITLE__
        </H3>
      </Text>
      <Box
        flex={1}
      />
      <Divider />
      <Box
        justifyContent="flex-end"
        margin="15px 0px 5px 0"
      >
        <Text
          color="MAIN_RED"
          fontSize="fs400"
          fontWeight="fw700"
        >
          lei 
          100
        </Text>
      </Box>
    </Box>
  </Box>
</Card>
`;
